# trader

./: bot.py  classifier_tester.py  environment.py  foo.py  main.py  networks.py  normalize_data.py  optimizer.pt  optimizer.py  plot_proposal_probabilities.py  regressor_tester.py  start_live.py  start_optimizer.py  start_simple_worker.py  start_simple_worker_classifier.py  start_simple_worker_regressor.py  start_simple_workers.py  start_simple_workers_classifier.py  start_simple_workers_regressor.py  start_test_workers.py  start_worker.py  start_workers.py  test.py  test_classification.py  test_regression.py  worker.py
zeus_master/: .gitignore  Cargo.toml  LICENSE  README.md  plot  run.py  sample.json
zeus_master/models/keras/: cnn_lstm  keras_to_tensorflow.py
zeus_master/python/: classification.py  keras_to_tensorflow.py  lstm.py  new_trader.py  new_zeus.py  other  prediction.py  results.json  test.py  trader.py  utility.py  zeus
zeus_master/python/save/: best_action.hdf5  lstm.h5  pip_predict.hdf5  pip_predict_0.hdf5  pip_predict_1.hdf5  zeus-dqn-ema.h5  zeus-dqn-rsi.h5
zeus_master/python/wrapper/: data.py  zeus.py
zeus_master/res/models/: lstm.py
zeus_master/res/series/: AUD_CAD_M1.json  EUR_USD_M5_TEST_1.json
zeus_master/src/: colors.rs  lib.rs  session.rs
zeus_master/src/brokers/: external.rs  sim.rs
zeus_master/src/connectors/: mod.rs  oanda.rs
zeus_master/src/data/: mod.rs  models.rs  process.rs
zeus_master/src/datasource/: external.rs  mod.rs
zeus_master/src/models/: mod.rs
zeus_master/src/storage/: mod.rs
zeus_master/src/trade/: mod.rs  (+1 more)
(+100 files in other folders)
